syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.pki;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/pki/types";

import "zigbeealliance/distributedcomplianceledger/pki/certificate.proto";

message NocCertificatesBySubjectKeyID {
  string subjectKeyId = 1;
  repeated Certificate certs = 2;
  float tq = 3;
  uint32 schemaVersion = 4;
}

